--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "leon-mahs-work",
-  "version": "0.1.0",
+  "name": "mah-leons-work",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
