--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "bootstrap": "^4.6.0",
     "express": "^4.17.2",
-    "next": "11.0.1",
-    "react": "17.0.2",
+    "https": "^1.0.0",
+    "next": "^11.0.1",
+    "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "sass": "^1.37.5"
   },
   "devDependencies": {
-    "eslint": "7.30.0",
-    "eslint-config-next": "11.0.1"
+    "eslint": "^7.30.0",
+    "eslint-config-next": "^11.0.1"
   }
 }
