--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "asa-leons-works",
-  "version": "0.2.1",
+  "version": "0.3.1",
   "private": true,
   "scripts": {
     "dev": "node server.js",
-    "dev:https": "HTTPS=true node server.js",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "NODE_ENV=production node server.js",
     "lint": "next lint"
   },
@@ -17,7 +16,7 @@
     "bootstrap": "^4.6.0",
     "express": "^4.17.2",
     "https": "^1.0.0",
-    "next": "^11.0.1",
+    "next": "^12.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
