--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "local-dev": "next dev",
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
+    "start-dev": "node serverOnLocal.js",
     "lint": "next lint"
   },
   "dependencies": {
