--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@popperjs/core": "^2.11.2",
     "bootstrap": "^4.6.0",
     "express": "^4.17.2",
+    "helmet": "^5.0.2",
     "https": "^1.0.0",
     "next": "^12.0.1",
     "react": "^17.0.2",
