--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "express": "^4.17.2",
     "helmet": "^5.0.2",
     "https": "^1.0.0",
+    "lru-cache": "^7.10.1",
     "next": "^12.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "request-ip": "^2.1.3",
     "sass": "^1.37.5"
   },
   "devDependencies": {
