Edit; made 'next.config.js' to choose, phase between dev and production. Which means include security headers or not.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "node ./server.js",
-    "local-dev": "node ./serverOnLocal.js",
+    "local-dev": "next dev",
     "build": "next build",
     "start": "NODE_ENV=production HTTPS=true node ./server.js",
     "start-dev": "NODE_ENV=production HTTPS=true node ./serverOnLocal.js",
