--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "local-dev": "next dev",
     "build": "next build",
     "start": "NODE_ENV=production HTTPS=true node ./server.js",
-    "start-dev": "NODE_ENV=production node ./serverOnLocal.js",
+    "start-local": "NODE_ENV=production node ./serverOnLocal.js",
+    "start-devServer": "NODE_ENV=production node ./devServer.js",
     "lint": "next lint"
   },
   "dependencies": {
