--- a/package.json
+++ b/package.json
@@ -1,37 +1,38 @@
 {
-  "name": "asa-leons-works",
-  "version": "0.3.1",
-  "private": true,
-  "scripts": {
-    "dev": "node ./server.js",
-    "local-dev": "next dev",
-    "build": "next build",
-    "start": "NODE_ENV=production HTTPS=true node ./server.js",
-    "start-local": "NODE_ENV=production node ./serverOnLocal.js",
-    "start-devServer": "NODE_ENV=production node ./devServer.js",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.3.0-beta3",
-    "@fortawesome/free-brands-svg-icons": ">5.15.3",
-    "@fortawesome/free-regular-svg-icons": "^6.0.0-beta3",
-    "@fortawesome/free-solid-svg-icons": "^6.0.0-beta3",
-    "@fortawesome/react-fontawesome": "^0.1.17",
-    "@popperjs/core": "^2.11.2",
-    "bootstrap": "^4.6.0",
-    "express": "^4.17.2",
-    "helmet": "^5.0.2",
-    "https": "^1.0.0",
-    "lru-cache": "^7.10.1",
-    "next": "^12.0.1",
-    "react": "^17.0.2",
-    "react-bootstrap": "^1.6.1",
-    "react-dom": "^17.0.2",
-    "request-ip": "^2.1.3",
-    "sass": "^1.37.5"
-  },
-  "devDependencies": {
-    "eslint": "^7.30.0",
-    "eslint-config-next": "^11.0.1"
-  }
+	"name": "asa-leons-works",
+	"version": "0.3.1",
+	"private": true,
+	"scripts": {
+		"dev": "node ./server.js",
+		"local-dev": "next dev",
+		"build": "next build",
+		"start": "NODE_ENV=production HTTPS=true node ./server.js",
+		"start-local": "NODE_ENV=production node ./serverOnLocal.js",
+		"start-devServer": "NODE_ENV=production node ./devServer.js",
+		"start-newServer": "NODE_ENV=production node ./newServer.js",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^1.3.0-beta3",
+		"@fortawesome/free-brands-svg-icons": ">5.15.3",
+		"@fortawesome/free-regular-svg-icons": "^6.0.0-beta3",
+		"@fortawesome/free-solid-svg-icons": "^6.0.0-beta3",
+		"@fortawesome/react-fontawesome": "^0.1.17",
+		"@popperjs/core": "^2.11.2",
+		"bootstrap": "^4.6.0",
+		"express": "^4.17.2",
+		"helmet": "^5.0.2",
+		"https": "^1.0.0",
+		"lru-cache": "^7.10.1",
+		"next": "^12.0.1",
+		"react": "^17.0.2",
+		"react-bootstrap": "^1.6.1",
+		"react-dom": "^17.0.2",
+		"request-ip": "^2.1.3",
+		"sass": "^1.37.5"
+	},
+	"devDependencies": {
+		"eslint": "^7.30.0",
+		"eslint-config-next": "^11.0.1"
+	}
 }
