--- a/package.json
+++ b/package.json
@@ -12,26 +12,29 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@fortawesome/fontawesome-svg-core": "^1.3.0-beta3",
-		"@fortawesome/free-brands-svg-icons": ">5.15.3",
-		"@fortawesome/free-regular-svg-icons": "^6.0.0-beta3",
-		"@fortawesome/free-solid-svg-icons": "^6.0.0-beta3",
-		"@fortawesome/react-fontawesome": "^0.1.17",
-		"@popperjs/core": "^2.11.2",
-		"bootstrap": "^4.6.0",
-		"express": "^4.17.2",
-		"helmet": "^5.0.2",
+		"@fortawesome/fontawesome-svg-core": "^6.5.2",
+		"@fortawesome/free-brands-svg-icons": "^6.5.2",
+		"@fortawesome/free-regular-svg-icons": "^6.5.2",
+		"@fortawesome/free-solid-svg-icons": "^6.5.2",
+		"@fortawesome/react-fontawesome": "^0.1.19",
+		"@popperjs/core": "^2.11.8",
+		"bootstrap": "^4.6.2",
+		"express": "^4.19.2",
+		"helmet": "^5.1.1",
 		"https": "^1.0.0",
-		"lru-cache": "^7.10.1",
-		"next": "^12.0.1",
-		"react": "^17.0.2",
-		"react-bootstrap": "^1.6.1",
-		"react-dom": "^17.0.2",
-		"request-ip": "^2.1.3",
-		"sass": "^1.37.5"
+		"lru-cache": "^7.18.3",
+		"next": "^14.2.3",
+		"react": "^18.3.1",
+		"react-bootstrap": "^1.6.8",
+		"react-dom": "^18.3.1",
+		"request-ip": "^3.3.0",
+		"sass": "^1.77.1"
 	},
 	"devDependencies": {
 		"eslint": "^7.30.0",
-		"eslint-config-next": "^11.0.1"
+		"eslint-config-next": "^13.5.6"
+	},
+	"overrides": {
+		"json5": ">=1.0.2"
 	}
 }
