--- a/package.json
+++ b/package.json
@@ -31,8 +31,16 @@
 		"sass": "^1.77.1"
 	},
 	"devDependencies": {
+		"@types/bootstrap": "^5.2.10",
+		"@types/eslint": "^8.56.10",
+		"@types/express": "^4.17.21",
+		"@types/node": "^20.12.12",
+		"@types/react": "^18.3.2",
+		"@types/react-bootstrap": "^0.32.36",
+		"@types/react-dom": "^18.3.0",
 		"eslint": "^7.30.0",
-		"eslint-config-next": "^13.5.6"
+		"eslint-config-next": "^13.5.6",
+		"typescript": "^5.4.5"
 	},
 	"overrides": {
 		"json5": ">=1.0.2"
