Fixed; errors of typescript's conflicts. Edit; localServer's port.

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
 		"local-dev": "next dev",
 		"build": "next build",
 		"start": "NODE_ENV=production HTTPS=true node ./server.js",
-		"start-local": "NODE_ENV=production node ./serverOnLocal.js",
-		"start-devServer": "NODE_ENV=development node ./devServer.js",
+		"start-localServer": "NODE_ENV=development node ./localServer.ts",
+		"start-devServer": "NODE_ENV=development node ./devServer.ts",
 		"start-prodServer": "NODE_ENV=production node ./prodServer.js",
 		"lint": "next lint"
 	},
